add deploy section

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,16 @@ after_success:
     - docker push gsvaldes/multi-server
     - docker push gsvaldes/multi-worker
 
+deploy:
+    provider: elasticbeanstalk
+    region: us-east-2
+    app: multi-docker
+    env: MultiDocker-env
+    bucket_name: elasticbeanstalk-us-east-2-761326753658
+    bucket_path: docker-multi
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+
 
